Rename bin/solr-bootstrap to bin/solr License header Tidy ForbiddenAPI UnusedDeclared artifacts Changelog